<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".CreateEventAddressActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchList" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/eventStreet_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/eventStreet_create"
                android:inputType="text" />

            <EditText
                android:id="@+id/eventHouseNumber_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/eventStreet_create"
                android:layout_below="@+id/eventStreet_create"
                android:ems="10"
                android:hint="@string/eventHouseNumber_create"
                android:inputType="number" />

            <EditText
                android:id="@+id/eventZip_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/eventHouseNumber_create"
                android:layout_below="@+id/eventHouseNumber_create"
                android:ems="10"
                android:hint="@string/eventZip_create"
                android:inputType="number" />

            <EditText
                android:id="@+id/eventCity_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/eventZip_create"
                android:layout_below="@+id/eventZip_create"
                android:ems="10"
                android:hint="@string/eventCity_create"
                android:inputType="text" />

            <EditText
                android:id="@+id/eventShortDescription_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/eventCity_create"
                android:layout_below="@+id/eventCity_create"
                android:ems="10"
                android:hint="@string/eventShortDescription_create"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/createEventCreateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/eventShortDescription_create"
                android:layout_below="@+id/eventShortDescription_create"
                android:hint="@string/createEventCreateButton" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>