<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".EventActivity" >

    <TextView
        android:id="@+id/eventTextView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/eventTextView_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/EventTextView_createdBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/eventTextView_title"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/eventTextView_title"
        android:text="@string/eventTextView_createdBy"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/eventTextView_abstract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eventTextView_title"
        android:layout_below="@+id/eventTextView_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/eventTextView_currentParticipants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eventTextView_abstract"
        android:layout_below="@+id/eventTextView_abstract"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/eventTextView_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eventTextView_currentParticipants"
        android:layout_below="@+id/eventTextView_currentParticipants"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/eventTextView_freeSlots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eventTextView_cost"
        android:layout_below="@+id/eventTextView_cost"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/eventTextView_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eventTextView_freeSlots"
        android:layout_below="@+id/eventTextView_freeSlots"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/eventTextView_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eventTextView_address"
        android:layout_below="@+id/eventTextView_address"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/join_event_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eventTextView_date"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:text="@string/join_event_button" />

    <Button
        android:id="@+id/cancel_event_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/join_event_button"
        android:layout_alignBottom="@+id/join_event_button"
        android:layout_alignParentRight="true"
        android:layout_marginRight="21dp"
        android:text="@string/cancel_event_button" />

    <Button
        android:id="@+id/edit_event_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/join_event_button"
        android:layout_alignBottom="@+id/join_event_button"
        android:layout_alignRight="@+id/join_event_button"
        android:text="@string/edit_event_button" />

</RelativeLayout>